# pattan-email

./: .gitignore  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg
docs/cli/: pe_cli.md
docs/pattan_email/: PattanEmail.md  exceptions.md  index.md  tests.md
docs/pattan_sendgrid/: PattanEmail.md  exceptions.md  models.md  tests.md
pattan_email/: PattanEmail.py  __init__.py  __main__.py  apps.py  cli.py  constants.py  exceptions.py  models.py  tests.py  urls.py  views.py
pattan_email/commands/: template.py
pattan_email/forms/: __init__.py  event_all_attendee_message_form.py
pattan_email/templates/communications/: index.html
src/cli/: get_config.py  greet.py  pe_cli.py
src/pattan_email/: .PattanEmail.py.swp  PattanEmail.py  exceptions.py  models.py  tests.py
src/pattan_sendgrid/: PattanEmail.py  tests.py
tests/: click_test.py
