[project]
name = "pattan-sendgrid"
version = "2.2.0"
authors = [
  { name="Markus Weltin", email="mweltin@pattan.net" },
  { name="Don Rea", email="drea@pattan.net" },
]
maintainers = [
  { name="Don Rea", email="drea@pattan.net" },
]
description = "Manage Sendgrid assets"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sendgrid>=6.10.0","pydantic>=2.11.4","click>=8.2.0"
]

keywords = ["pattan", "sendgrid", ]

[project.urls]
Homepage = "https://github.com/pattan-net/pattan-email"
Documentation = "https://github.com/pattan-net/pattan-email/docs"

[project.scripts]
pe = "cli.pe_cli:pe_cli"

[build-system]
requires = ['setuptools>=40.8.0', 'sendgrid>=6.10.0', 'certifi', 'pydantic', 'click']
build-backend = 'setuptools.build_meta'