[metadata]
name = pattan-email
version = 1.0.0
description = A Django app to interface with sendgrid.
long_description = file: README.md
url = https://www.youtube.com/playlist?list=PLahl4T9HjpH8IL_-JhnkXAcCBpLu_ynP4
author = mweltin
author_email = mweltin@pattan.net 
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0 # 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 5.0 
